--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <header class="text-center col-12">
                  <h2 class="text-uppercase"><strong> biggest startup event of the year</strong></h2>
             </header>
-            <div class="buffer col-12"></div>
 
+
+            <div class="buffer col-12"></div>
+            <h1>My File</h1>
             <section class="text-center col-12">
                 <hr>
                 <a href="#"><button class="btn btn-primary btn-xl">find out more</button></a>    
