--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
             <div class="buffer col-12"></div>
             <h1>My File</h1>
+            <h2>Free Trenings</h2>
             <section class="text-center col-12">
                 <hr>
                 <a href="#"><button class="btn btn-primary btn-xl">find out more</button></a>    
